--- a/Score.html
+++ b/Score.html
@@ -17,7 +17,7 @@
 
         /* Add this CSS to set the background image */
         .card-content {
-              background-image: url('./form2.jpg')
+            background-image: url('./form2.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
