--- a/Score.html
+++ b/Score.html
@@ -17,7 +17,8 @@
 
         /* Add this CSS to set the background image */
         .card-content {
-            background-image: url('./form2.jpg');
+            background-image:
+            url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmCQ2-orHiYPHJTsdyE-sqv4kBOj0xaMff9Q&s');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
