--- a/Score.html
+++ b/Score.html
@@ -22,7 +22,7 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            color: powderblue /* Adjust text color for better visibility */
+            color: 	#B6D0E2; /* Adjust text color for better visibility */
         }
     </style>
 </head>
